--- a/files/vars.j2
+++ b/files/vars.j2
@@ -1,5 +1,5 @@
 set_var EASYRSA                 "$PWD"
-set_var EASYRSA_PKI             "$EASYRSA/pki"
+set_var EASYRSA_PKI             "$/etc/openvpn/easy-rsa/pki"
 set_var EASYRSA_DN              "cn_only"
 set_var EASYRSA_REQ_COUNTRY     "ID"
 set_var EASYRSA_REQ_PROVINCE    "Jakarta"
