--- a/files/apache.conf.j2
+++ b/files/apache.conf.j2
@@ -1,5 +1,5 @@
 <VirtualHost *:{{ http_port }}>
-   ServerAdmin webmaster@localhost
+   ServerAdmin 404notfound
    ServerName {{ http_host }}
    ServerAlias www.{{ http_host }}
    DocumentRoot /var/www/{{ http_host }}
